changed size of h1, fixed stretching of splash image due to default stretch of align-items

--- a/less/index.less
+++ b/less/index.less
@@ -99,8 +99,13 @@ a {
     padding: 50px 5%;
     .flex(flex-start);
     flex-direction: column;
+    align-items: flex-start;
     img {
       height: 300px;
+    }
+    h1 {
+      margin-top: 30px;
+      font-size: 3rem;
     }
   }
 }
